@@ -1,3 +1,10 @@
+# Apr, 30 2003
+- fixed bug: segfault if unable to bind to specified port
+- fixed bug: segfault if unable to write users file at server exit
+- changed file locking code to allow locking files without opening them
+  in read-write mode. This also removes a race condition
+- changed reply code to 550 if file not found (RETR)
+
 # Apr, 29 2003
 - fixed bug: server segfault if homedir does not exist
 - patch to run on FreeBSD
